@@ -12,7 +12,7 @@ repositories {
 
 application {
     mainClassName = 'br.pucrio.opus.smells.Organic'
-    applicationDefaultJvmArgs = ['-Xms40m','-Xmx4096m']
+    applicationDefaultJvmArgs = ['-Xms40m','-Xmx4096m','--add-opens java.base/java.util=ALL-UNNAMED']
 }
 
 sourceSets {
